Fixed page container to position:fixed and set overflow to scroll to keep background image still on mobile or smaller screen

--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,8 @@ body {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    position: fixed;
+    overflow: scroll;
 }
 
 .content-box {
